# save-cards-app

./: .dockerignore  .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .yarnclean  README.md  docker-assist  package-lock.json  package.json  tailwind.js  tsconfig.json
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: backend-node.yml  backend.yml  frontend.yml
design/: design.sketch  fonts.txt
docker/Docker.server/: Dockerfile  entrypoint.sh
mock-node-server/: index.js
mock-node-server/data/: authors.js  index.js  posts.js
node-server/: .eslintignore  .eslintrc.js  .prettierignore  codegen.yml  index.ts  package.json  resolvers.spec.ts  resolvers.ts  schema.json  tsconfig.json
node-server/data/: index.ts  user.ts
public/: index.html
server/: .env.pytest  Pipfile  lint.sh  pyproject.toml  setup.cfg
server/cards/: models.py  schema.py
server/uplifty/: schema.py  settings.py
src/: App.css  App.js  App.test.js  data.js  index.js
src/assets/: main.css  tailwind.css
src/components/: Cards.js  Counter.js  Deal.js  Deal1.js  DealerDeck.js  PlayAgain.js  PokerMain.js  Reset.js  WinOrLose.js
src/components/shared/: Error.js  Loader.js
