[tool.black]
line-length = 100
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | dist
    | staticfiles
  )/
)
'''

[tool.isort]
line_length = 100
# multi_line_output
# 3 = "Vertical Hanging Indent", options here: https://timothycrosley.github.io/isort/#multi-line-output-modes
multi_line_output = 3
include_trailing_comma = true
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_django = "django,celery,corsheaders,graphene,graphene-django"
known_first_party = "uplifty"
default_section = "THIRDPARTY"

[tool.poetry]
name = "uplifty"
version = "0.1.0"
description = ""
authors = ["Uplift <interview@uplift.ltd>"]

[tool.poetry.dependencies]
python = "3.8.5"
celery = "*"
django = ">=3"
django-cors-headers = "*"
django-environ = "*"
graphene = "*"
graphene-django = "*"
gunicorn = "*"
psycopg2-binary = "*"

[tool.poetry.dev-dependencies]
autoflake = "*"
bandit = "*"
black = "^19.10b0"
django-dotenv = "*"
django-extensions = "*"
factory-boy = "*"
faker = "*"
flake8 = "*"
ipython = "*"
isort = "*"
mccabe = "*"
pylama = "*"
pytest = "<5"
pytest-cov = "*"
pytest-django = "*"
pytest-factoryboy = "*"
pytest-flakes = "*"
pytest-mock = "*"
pytest-pep8 = "*"
safety = "*"
